# clmixer

./: .gitignore  CMakeLists.txt  Dockerfile  Dracutfile  Jenkinsfile  README.md  pipeline_config.groovy  sonar-project.properties
examples/opencl/: buffer_copy_long.c  buffer_loop_long.c
src/: const.cpp  const.h  data.cpp  data.h  device.cpp  device.h  helper.cpp  helper.h  main.cpp  main.h  opencl.cpp  opencl.h  result.cpp  result.h  task.cpp  task.h
tests/: helper.test.cpp
